--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=UnifrakturCook:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
 h1 {
   font-family: 'Bungee Shade', cursive;
 }
