--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
 h1 {
-  font-family: 'Bungee Shade', cursive;
+  font-family: 'UnifrakturCook'
 }
 
 
