--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
 h1 {
   font-family: 'UnifrakturCook'
+    text-transform: lowercase;
 }
 
 
