--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Almendra+SC&display=swap');
 h1 {
-  font-family: 'UnifrakturCook'
+  font-family: 'Almendra SC', serif;
 }
 
 
