--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Almendra+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Iceberg&display=swap');
 h1 {
-  font-family: 'Almendra SC', serif;
+  font-family: 'Iceberg', sans-serif;
+  text-transform: lowercase;
 }
 
 
