--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Iceberg&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Iceberg&display=swap');
+
 h1 {
   font-family: 'Iceberg', sans-serif;
   text-transform: lowercase;
   color: #9fdcff;
 }
+
+html {
+  font-family: 'Iceberg', sans-serif;
+}
+
+*, *::before, *::after {
+  font-family: inherit;
+}
+
+button,
+input,
+textarea,
+select {
+  font-family: inherit;
+}
+
 
 
 
